[gd_scene load_steps=32 format=3 uid="uid://baf7exhdloebg"]

[ext_resource type="Script" uid="uid://drk25wqunotfg" path="res://game/ui_components/hud.gd" id="1_7tx1p"]
[ext_resource type="FontFile" uid="uid://bh110mjkyclct" path="res://assets/fonts/PixelOperator8.ttf" id="1_aowct"]
[ext_resource type="Script" uid="uid://ca70icuk6agxr" path="res://game/ui_components/hud_game_time_manager.gd" id="3_cq5av"]
[ext_resource type="Texture2D" uid="uid://brcffsluj5uh5" path="res://assets/sprites/player/healthbar.png" id="3_xi2ed"]
[ext_resource type="PackedScene" uid="uid://c8b54giv5xw34" path="res://game/ui_components/upgrades_popup.tscn" id="4_4mesk"]
[ext_resource type="FontFile" uid="uid://dn3wcxcgwamg3" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="4_ml6tl"]
[ext_resource type="Texture2D" uid="uid://rvexaq6t41u4" path="res://assets/white.png" id="6_47rti"]
[ext_resource type="Texture2D" uid="uid://cmjh7mrbhpggb" path="res://assets/sprites/player/HUDForcefieldTEST2.png" id="7_n3kp7"]
[ext_resource type="Texture2D" uid="uid://dy1ohr028xlqu" path="res://assets/sprites/player/ICEPOWERUPHUD.png" id="7_ywtak"]
[ext_resource type="Texture2D" uid="uid://dc3fdanau42iu" path="res://assets/sprites/player/HUDMINE.png" id="10_ml6tl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xi2ed"]
atlas = ExtResource("3_xi2ed")
region = Rect2(1900, 0, 189, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mesk"]
atlas = ExtResource("3_xi2ed")
region = Rect2(1710, 0, 189, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_wasia"]
atlas = ExtResource("3_xi2ed")
region = Rect2(1520, 0, 189, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j8kc"]
atlas = ExtResource("3_xi2ed")
region = Rect2(1330, 0, 189, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpu5c"]
atlas = ExtResource("3_xi2ed")
region = Rect2(1140, 0, 189, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaqaf"]
atlas = ExtResource("3_xi2ed")
region = Rect2(950, 0, 189, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1o6x"]
atlas = ExtResource("3_xi2ed")
region = Rect2(760, 0, 189, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_10c6b"]
atlas = ExtResource("3_xi2ed")
region = Rect2(570, 0, 189, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqcvi"]
atlas = ExtResource("3_xi2ed")
region = Rect2(380, 0, 189, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyeum"]
atlas = ExtResource("3_xi2ed")
region = Rect2(190, 0, 189, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovkku"]
atlas = ExtResource("3_xi2ed")
region = Rect2(0, 0, 189, 41)

[sub_resource type="SpriteFrames" id="SpriteFrames_ltnow"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi2ed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mesk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wasia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j8kc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpu5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaqaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1o6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10c6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqcvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyeum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovkku")
}],
"loop": false,
"name": &"display_health",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_5gbug"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureProgressBar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_n3kp7"]
resource_name = "cooldown"
length = 15.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureProgressBar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [100.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cq5av"]
_data = {
&"RESET": SubResource("Animation_5gbug"),
&"cooldown": SubResource("Animation_n3kp7")
}

[sub_resource type="Animation" id="Animation_ml6tl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureProgressBar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_cq5av"]
resource_name = "cooldown"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureProgressBar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [100.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5gbug"]
_data = {
&"RESET": SubResource("Animation_ml6tl"),
&"cooldown": SubResource("Animation_cq5av")
}

[sub_resource type="Animation" id="Animation_47rti"]
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureProgressBar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_kkiei"]
resource_name = "cooldown"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureProgressBar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [100.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n3kp7"]
_data = {
&"RESET": SubResource("Animation_47rti"),
&"cooldown": SubResource("Animation_kkiei")
}

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_7tx1p")

[node name="message_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="start_message" type="Label" parent="."]
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -575.0
offset_top = -325.0
offset_right = 575.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_aowct")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="health" type="Label" parent="."]
visible = false
offset_left = 4.0
offset_top = 31.0
offset_right = 206.0
offset_bottom = 54.0
theme_override_fonts/font = ExtResource("1_aowct")
theme_override_font_sizes/font_size = 16
text = "Health [           ]"

[node name="ammo" type="Label" parent="."]
offset_left = 4.0
offset_top = 51.0
offset_right = 208.0
offset_bottom = 74.0
theme_override_fonts/font = ExtResource("1_aowct")
theme_override_font_sizes/font_size = 16
text = "Ammo   [           ]"

[node name="boost" type="Label" parent="."]
offset_left = 4.0
offset_top = 71.0
offset_right = 188.0
offset_bottom = 94.0
theme_override_fonts/font = ExtResource("1_aowct")
theme_override_font_sizes/font_size = 16
text = "Boost [          ]"

[node name="hud_game_time_manager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("3_cq5av")

[node name="in_game_timer" type="Label" parent="hud_game_time_manager"]
layout_mode = 0
offset_left = 1070.0
offset_top = 4.0
offset_right = 1151.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("4_ml6tl")
theme_override_font_sizes/font_size = 8
text = "00:12:34.56"

[node name="controls" type="Label" parent="."]
offset_left = 280.0
offset_top = -7.0
offset_right = 910.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("1_aowct")
theme_override_font_sizes/font_size = 8
text = "WASD move, SPACE shoot, SHIFT boost, CTRL turn harder, 2 forcefield, 3 proximity mine, 4 ice powerup"
vertical_alignment = 2

[node name="healthbar_sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(99, 24)
sprite_frames = SubResource("SpriteFrames_ltnow")
animation = &"display_health"
frame = 10
frame_progress = 1.0

[node name="upgrades_popup" parent="." instance=ExtResource("4_4mesk")]

[node name="ice_powerup_icon" type="Sprite2D" parent="."]
clip_children = 2
position = Vector2(207, 604)
texture = ExtResource("7_ywtak")

[node name="Label" type="Label" parent="ice_powerup_icon"]
z_index = 1
offset_left = -27.000008
offset_top = -78.000015
offset_right = 53.158104
offset_bottom = -64.787125
scale = Vector2(1.182812, 1.182812)
theme_override_fonts/font = ExtResource("1_aowct")
theme_override_font_sizes/font_size = 8
text = "Railgun"

[node name="TextureProgressBar" type="TextureProgressBar" parent="ice_powerup_icon"]
self_modulate = Color(0.18431373, 0.18431373, 0.18039216, 0.6901961)
offset_left = -34.99999
offset_top = -44.999985
offset_right = 7.943142
offset_bottom = 68.541275
scale = Vector2(1.7020652, 0.7926634)
fill_mode = 3
nine_patch_stretch = true
texture_progress = ExtResource("6_47rti")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ice_powerup_icon"]
libraries = {
&"": SubResource("AnimationLibrary_cq5av")
}

[node name="forcefield_icon" type="Sprite2D" parent="."]
clip_children = 2
position = Vector2(35, 598)
texture = ExtResource("7_n3kp7")

[node name="TextureProgressBar" type="TextureProgressBar" parent="forcefield_icon"]
self_modulate = Color(0.18431373, 0.18431373, 0.18039216, 0.6901961)
offset_left = -52.999992
offset_top = -50.0
offset_right = -12.999992
offset_bottom = -10.0
scale = Vector2(2.641327, 2.5003638)
fill_mode = 3
nine_patch_stretch = true
texture_progress = ExtResource("6_47rti")

[node name="AnimationPlayer" type="AnimationPlayer" parent="forcefield_icon"]
libraries = {
&"": SubResource("AnimationLibrary_5gbug")
}

[node name="Label" type="Label" parent="forcefield_icon"]
z_index = 1
offset_left = -34.000004
offset_top = -72.0
offset_right = 42.73482
offset_bottom = -57.446777
scale = Vector2(1.0831504, 1.0831504)
theme_override_fonts/font = ExtResource("1_aowct")
theme_override_font_sizes/font_size = 8
text = "Spreader"

[node name="proxy_mine_icon" type="Sprite2D" parent="."]
clip_children = 2
texture_filter = 3
position = Vector2(119, 595)
texture = ExtResource("10_ml6tl")

[node name="TextureProgressBar" type="TextureProgressBar" parent="proxy_mine_icon"]
self_modulate = Color(0.18431373, 0.18431373, 0.18039216, 0.6901961)
offset_left = -35.0
offset_top = -48.0
offset_right = 5.0
offset_bottom = -8.0
scale = Vector2(1.7213287, 2.5003624)
fill_mode = 3
nine_patch_stretch = true
texture_progress = ExtResource("6_47rti")

[node name="AnimationPlayer" type="AnimationPlayer" parent="proxy_mine_icon"]
libraries = {
&"": SubResource("AnimationLibrary_n3kp7")
}

[node name="Label" type="Label" parent="proxy_mine_icon"]
z_index = 1
offset_left = -52.0
offset_top = -69.0
offset_right = 39.0
offset_bottom = -58.517548
scale = Vector2(1.1689442, 1.1689442)
theme_override_fonts/font = ExtResource("1_aowct")
theme_override_font_sizes/font_size = 8
text = "Homing Missile"

[connection signal="timeout" from="message_timer" to="." method="_on_message_timer_timeout"]
